Observer pattern example with Thread